Fix: :skull: Pixel perfect layout shift fix

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -207,7 +207,7 @@
   }
 
   .clip-header-image img {
-    aspect-ratio: 8 / 4;
+    aspect-ratio: 8 / 4.2;
     @apply  bg-indigo-200 dark:bg-elegiac-dark;
   }
 
